Actions
Bug #6408
closedlibbe shouldn't run installgrub on offline/unavail/faulted vdevs
Start date:
2015-10-29
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
When activating a new boot environment requires the boot loader to be updated, libbe will by default try to install the boot loader on all vdevs of the root pool. If that fails for one of these vdevs, the whole procedure will fail and the new BE won't be activated. This is a problem if one of the root pool vdevs is currently unavailable or broken for whatever reason.
Updated by Electric Monk almost 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 08e9b2df0318952b8677b4feb62b4ec784f28101
commit 08e9b2df0318952b8677b4feb62b4ec784f28101 Author: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Date: 2015-11-06T16:30:19.000Z 6408 libbe shouldn't run installgrub on offline/unavail/faulted vdevs Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions